--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iPad</title>
+    <title>tablet</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div id="container">
       <div id="frame">
         <div id="home-btn"></div>
+        <div id="camera-outer">
+          <div id="camera-inner"></div>
+        </div>
         <div id="display">
-          
+          <div id="header"></div>
+          <div id="desktop"></div>
+          <div id="dock"></div>
         </div>
       </div>
     </div>
