connection symbol and clock
decorative connection symbol added and clock is still static

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -14,7 +14,17 @@
           <div id="camera-inner"></div>
         </div>
         <div id="display">
-          <div id="header"></div>
+
+          <div id="header">
+            <div id="internet-symbol">
+              <div id="bar1" class="bar"></div>
+              <div id="bar2" class="bar"></div>
+              <div id="bar3" class="bar"></div>
+            </div>
+
+            <span id="clock">00:00</span>
+          </div>
+
           <div id="desktop"></div>
           <div id="dock"></div>
         </div>
