--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tablet</title>
+
+    <!-- JQuery -->
+    <script src="./assets/lib/jquery-3.5.1.js"></script>
+
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="./assets/lib/reset.css">
+
+
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -30,5 +38,6 @@
         </div>
       </div>
     </div>
+    <script src="./assets/javascript/toggleTablet.js"></script>
   </body>
 </html>
