clock working now
the clock now gets updated every second

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -38,6 +38,9 @@
         </div>
       </div>
     </div>
+
+    <script src="./assets/javascript/header/clock.js"></script>
     <script src="./assets/javascript/toggleTablet.js"></script>
+    <script src="./assets/javascript/initialisation.js"></script>
   </body>
 </html>
