--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -28,6 +28,7 @@
               <div id="bar1" class="bar"></div>
               <div id="bar2" class="bar"></div>
               <div id="bar3" class="bar"></div>
+              <div id="bar4" class="bar"></div>
             </div>
 
             <span id="clock">00:00</span>
@@ -39,8 +40,7 @@
       </div>
     </div>
 
-    <script src="./assets/javascript/header/clock.js"></script>
-    <script src="./assets/javascript/toggleTablet.js"></script>
-    <script src="./assets/javascript/initialisation.js"></script>
+    <script type="module" src="./assets/javascript/header/clock.js"></script>
+    <script type="module" src="./assets/javascript/tabletControl.js"></script>
   </body>
 </html>
