--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -21,6 +21,7 @@
         <div id="camera-outer">
           <div id="camera-inner"></div>
         </div>
+        <div id="off-overlay"></div>
         <div id="display">
 
           <div id="header">
@@ -32,6 +33,8 @@
             </div>
 
             <span id="clock">00:00</span>
+
+            <img src="./assets/img/battery-icon.png" alt="420%" id="battery-symbol">
           </div>
 
           <div id="desktop"></div>
