--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,8 +9,7 @@
     <script src="./assets/lib/jquery-3.5.1.js"></script>
 
     <!-- CSS Reset -->
-    <link rel="stylesheet" href="./assets/lib/reset.css">
-
+    <link rel="stylesheet" href="./assets/lib/reset.css" />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -23,7 +22,6 @@
         </div>
         <div id="off-overlay"></div>
         <div id="display">
-
           <div id="header">
             <div id="internet-symbol">
               <div id="bar1" class="bar"></div>
@@ -33,8 +31,13 @@
             </div>
 
             <span id="clock">00:00</span>
-
-            <img src="./assets/img/battery-icon.png" alt="420%" id="battery-symbol">
+            <div id="battery-container">
+              <img
+                src="./assets/img/battery-icon.png"
+                alt="420%"
+                id="battery-symbol"
+              />
+            </div>
           </div>
 
           <div id="desktop"></div>
